fixed circular angular dependence issue

--- a/Notebooks/Skymap_Neutrino_Fermi.ipynb
+++ b/Notebooks/Skymap_Neutrino_Fermi.ipynb
@@ -133,13 +133,16 @@
    },
    "outputs": [],
    "source": [
+    "%%time\n",
     "angular_res = 0.5\n",
     "within_res = []\n",
-    "for nu in nudist.get_random(10000):\n",
-    "    ra,dec = nu\n",
-    "    ra_sel = (fermi.ra>ra-angular_res) & (fermi.ra<ra+angular_res)\n",
-    "    dec_sel = (fermi.dec>dec-angular_res) & (fermi.dec<dec+angular_res)\n",
-    "    within_res.append(len(fermi[ra_sel & dec_sel]))\n",
+    "for ra,dec in nudist.get_random(100000):\n",
+    "    delta_ra = fermi.ra - ra\n",
+    "    delta_dec = fermi.dec - dec\n",
+    "    r = sqrt(delta_ra**2 + delta_dec**2)\n",
+    "    sel = r < angular_res\n",
+    "    n = sel.sum()\n",
+    "    within_res.append(n)\n",
     "    \n",
     "    "
    ]
@@ -152,7 +155,20 @@
    },
    "outputs": [],
    "source": [
-    "plt.hist(within_res)"
+    "plt.hist(within_res, bins=np.linspace(-0.5,9.5,11), normed=True)\n",
+    "plt.semilogy()\n",
+    "plt.ylim(1e-5,1e1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.linspace(0,10,11)"
    ]
   },
   {
